--- a/css/styles.css
+++ b/css/styles.css
@@ -105,3 +105,44 @@ textarea {
     font-style: italic;
     font-family: math;
 }
+
+html {
+    font-size: 1em;
+  }
+  
+h1 {
+    font-size: 2rem;
+  }
+  
+@media (min-width: 1200px) {
+    h1 {
+      font-size: 3rem;
+    }
+  }
+
+@media screen and (max-width: 600px) {
+    div.example {
+      display: none;
+    }
+  }  
+
+  @media only screen and (max-width: 600px) {
+    body {
+      background-color: lightgreen;
+    }
+  }
+
+  /* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px)
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 700px) 
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) 
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px) 
+
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media only screen and (min-width: 1200px) 
